--- a/src/component/AspectRatio/AspectRatio.module.css
+++ b/src/component/AspectRatio/AspectRatio.module.css
@@ -2,6 +2,7 @@
   display: block;
   position: relative;
   overflow: hidden;
+  width: 100%;
 }
 
 .root > *:not(picture) {
@@ -9,6 +10,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  width: 100%;
 }
 
 .root > picture > img {
@@ -18,4 +20,5 @@
   transform: translate(-50%, -50%);
   object-fit: cover;
   object-position: center;
+  width: 100%;
 }
